smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/mixins-with-members.flattened.smithy
$version: "1.1"

namespace smithy.example

structure F {
    a: String,
    b: String,
    c: String,
    d: String,
    e: String,
    f: String
}
