smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/required/multiple-required-exclamations.smithy
// Parse error at line 6, column 17 near `!\n`: Expected a valid identifier character, but found '!'
$version: "2"
namespace smithy.example

structure Foo {
    bar: String!!
}
